--- a/src/pages/page1/page1.html
+++ b/src/pages/page1/page1.html
@@ -8,13 +8,8 @@
 </ion-header>
 
 <ion-content padding>
-  <h3>Ionic Menu Starter</h3>
-
-  <img src="assets/icon/favicon.ico" alt="" />
-
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will show you the way.
-  </p>
-
-  <button ion-button secondary menuToggle>Toggle Menu</button>
+  <ion-input type="text" id="editNome" #editNome></ion-input>
+  <button id="btnCumprimentar" (click)="setUsername(editNome.value)"> Cumprimentar </button>
+  <br>
+  <ng-container>Olá, {{username ? username : 'Fulano'}}!</ng-container>
 </ion-content>
